Fix Card Alignment

--- a/css/index.css
+++ b/css/index.css
@@ -46,9 +46,11 @@ body{
 .hcard img{
     width:100%;
     height: 250px;
+    object-fit: cover;
 }
 
 .hcard-title{
+    font-size: 1.5em;
     font-weight: bold;
 }
 .hcard-content{
@@ -62,3 +64,9 @@ body{
     }
     
 }
+
+h2{
+    text-align: center;
+    text-decoration: underline;
+}
+
